# bevy_material_wizard

./: Cargo.toml  Readme.md
assets/material_replacements/: tree1.matrep.ron
src/: built_materials.rs  gltf_models.rs  lib.rs  material_definition.rs  material_name_map.rs  material_overrides.rs  material_replacements.rs  material_replacements_map.rs  materials_config.rs  registered_materials.rs  util.rs
