[package]
name = "bevy_material_wizard"
description = "A material replacement utility for bevy"
version = "0.15.13" 
edition = "2021"
authors = [ "ethereumdegen" ]
license = "MIT"
 
keywords = ["bevy", "editor"]
categories = ["game-development", "gui", "visualization"]
exclude = ["assets"]

 
 



[dependencies]
 
bevy = "0.15.1"
serde = { version = "1.0", features = ["derive"] }
ron = "0.8.1"
bevy_materialize = {  version="0.4.2"    }
