[package]
name = "bevy_material_wizard"
description = "A material replacement utility for bevy"
version = "0.16.5" 
edition = "2024"
authors = [ "ethereumdegen" ]
license = "MIT"
 
keywords = ["bevy", "editor"]
categories = ["game-development", "gui", "visualization"]
exclude = ["assets"]

 
 



[dependencies]
 
bevy = "0.16.0"
serde = { version = "1.0", features = ["derive"] }
ron = "0.8.1"
bevy_materialize = {  version="0.7.0"    }
